--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@qdrant/js-client-rest": "^1.16.2",
+    "cheerio": "^1.2.0",
     "cohere-ai": "^7.20.0",
     "dotenv": "^17.2.3",
     "next": "16.1.6",
