--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "jest"
+    "test": "jest",
+    "ingest:dry": "npx tsx -r dotenv/config app/scripts/ingest_all.ts --dry-run",
+    "eval": "npx tsx -r dotenv/config app/scripts/eval_sources.ts",
+    "weekly-check": "npm run ingest:dry && npm run eval"
   },
   "dependencies": {
     "@qdrant/js-client-rest": "^1.16.2",
