normalize URLs and published date

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "ingest:dry": "npx tsx -r dotenv/config app/scripts/ingest_all.ts --dry-run",
     "eval": "npx tsx -r dotenv/config app/scripts/eval_sources.ts",
-    "weekly-check": "npm run ingest:dry && npm run eval"
+    "weekly-check": "npm run ingest:dry && npm run eval",
+    "ingest": "tsx -r dotenv/config app/scripts/ingest_all.ts"
   },
   "dependencies": {
     "@qdrant/js-client-rest": "^1.16.2",
